Revision history for {{$dist->name}}

{{$NEXT}}
    - restore previous behaviour of plan()ing in import, to unbreak some
      dists that didn't follow the docs (which in this case is ok since it's a
      horrible idea for a Test module to plan itself anyway) (v1.05)

1.05      2013-05-12 17:17:32 PDT-0700 (Karen Etheridge)
    - more rigorous testing of output; (in order to make this possible) now we
      do END { done_testing } instead of planning a test count

1.04      2013-04-28 08:55:17 PDT-0700 (Karen Etheridge)
    - re-release with bumped developer prereqs to depend on a higher version
      of Test::More for t/00-compile.t and t/00-check-deps.t (RT#84900)

1.03      2013-04-27 05:49:31 PDT-0700 (Karen Etheridge)
    - fixed documentation to refer to the proper names of Kwalitee tests
      (RT#24506) (thanks, Gavin Sherlock!)
    - cleaned up partially-botched distribution metadata and README

1.02      2013-03-31 14:58:52 PDT-0700 (Karen Etheridge)
    - no operational changes - re-releasing under new management via github
      and Dist::Zilla

1.01  Thu Aug 14 2008
    - no entry made

1.00  Thu Aug 14 05:03:02 UTC 2008
    - fixed code to work with modern Module::CPANTS::Analyse (Elliot Shank,
        Xavier Caron, Heiko Eißfeldt, and probably others)
    - removed old code I don't want to support (Makefile.PL)

0.30  Fri Mar  3 19:01:56 UTC 2006
    - fix test plan count for including and excluding tests (Chris Dolan)
    - improve test coverage to check for that, too
    - added signature and signature test

0.20  Fri Mar  3 07:40:06 UTC 2006
    - added documentation
    - fixed include and exclude tests (thanks to Chris Dolan)
    - suppress weird CPANTS warnings (they didn't think I would do it this way)

0.10  Wed Feb 15 05:06:25 UTC 2006
    - hey, this version actually works
    - releasing to my web site, not the CPAN
    - still needs docs and, ironically, more tests

0.01  Thu Apr  7 05:57:17 UTC 2005
    - proof of concept