@@ -14,3 +14,4 @@
 todo.txt
 todo/
 /Debian_CPANTS.txt
+/t/corpus/Debian_CPANTS.txt
